# docs/swagger/swagger.yaml
@@ -364,6 +364,10 @@ definitions:
         type: string
       file_format:
         type: string
+      first_name_order:
+        description: 'true = FirstName LastName, false = LastName FirstName (default:
+          false)'
+        type: boolean
       folder_format:
         type: string
       group_actress:
