# internal/api/batch/process_media_helpers.go
@@ -44,6 +44,7 @@ func copyTempCroppedPoster(job *worker.BatchJob, movie *models.Movie, destDir st
 	ctx := template.NewContextFromMovie(movie)
 	ctx.GroupActress = cfg.Output.GroupActress
 	ctx.GroupActressName = cfg.Output.GroupActressName
+	ctx.FirstNameOrder = cfg.Output.FirstNameOrder
 	if multipart != nil {
 		ctx.IsMultiPart = multipart.IsMultiPart
 		ctx.PartNumber = multipart.PartNumber
